--- a/release_notes.txt
+++ b/release_notes.txt
@@ -1,4 +1,36 @@
 Release Date : April 9, 2025
+Version : v1.0.1
+
+feedback_summary.py
+top_scores(feedback_list, top_n=3)
+Returns the top N feedback scores (default is top 3).
+
+grade_wise_count(feedback_list)
+Categorizes feedback scores into grade buckets:
+
+A (≥ 4.5)
+
+B (3.5–4.49)
+
+C (2.5–3.49)
+
+D (< 2.5)
+
+Documentation
+Updated README.md:
+
+New section describing feedback summary functionality
+
+Examples of grading and score breakdown
+
+Pull Request
+Merged feature/summary into main via Pull Request:
+
+Includes new file, tests, and doc updates
+
+Passed all GitHub Actions test checks
+
+Release Date : April 9, 2025
 Version : v1.0.0
 
 Features
